quiz editing: MDL-17460 select element is populated with user-created data, CSS it width: 100%

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -4922,6 +4922,9 @@ css id's of question bank*/
 #mod-quiz-edit .questionbankwindow  #catmenu select{
     width:80%;
 }
+#mod-quiz-addrandom select {
+    width:100%;
+}
 #mod-quiz-edit table#categoryquestions{
     width:100%;
     overflow:hidden;
