course categories: Fix many bugs with category editing and permissions. Clean up code.
Bugs: MDL-17479, MDL-16426, MDL-16063, MDL-16013, MDL-15658, MDL-15556, MDL-15161, MDL-14925, MDL-13742, MDL-11557.

* Simplify category editing permissions to just moodle/category:manage and moodle/category:seehiddencategories.
* Enforce those correctly. (Note MDL 17502 is still outstanding.)
* Don't screw up category sort order when you just edit name or description.
* Niceties like where redirects go when you cancel or submit forms.
* Make sure a global course creator can see the site admin block.
* Don't allow a category to be made the child of one of its children!
* General code cleanup to bring key files more in line with best pracitice.

Apologies for the fact it is one big patch, rather than a series of smaller patches. However, categoryedit.php, category.php and index.php where in pretty bad shape and needed significant cleaning up. categoryedit.php, in particular, was almost completely rewritten.

Merged from MOODLE_19_STABLE.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2229,10 +2229,12 @@ body#course-category .addcategory {
   padding: 10px;
 }
 
+body#course-index .buttons .singlebutton,
 body#course-category .buttons .singlebutton {
   display: inline;
 }
 
+body#course-index .buttons,
 body#course-category .buttons {
   text-align: center;
   margin-bottom: 15px;
@@ -2329,6 +2331,7 @@ body#course-info .generalbox.info {
 
 #coursesearch,
 #coursesearch2 {
+  margin-top: 1em;
   text-align:center;
 }
 
