course request: MDL-9854 major cleanup to the course request code.
* Rewrite all the forms to use formslib and improve usability.
* Put the place where admins need to go to process approvals in the admin menu.
* Show the request course/pending requests button on the page for the category that requested courses get added to.

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2012,7 +2012,21 @@ body#course-info .generalbox.info {
 #my-index .name {
   margin-left: 5px;
 }
-
+#course-pending .pendingcourserequests {
+  margin-bottom: 1em;
+}
+#course-pending .pendingcourserequests .singlebutton {
+  display: inline;
+}
+#course-pending .pendingcourserequests .cell {
+  padding: 0 5px;
+}
+#course-pending .pendingcourserequests .cell.c6 {
+  white-space: nowrap;
+}
+#course-pending .singlebutton {
+  text-align: center;
+}
 .categorylist {
   width: 90%;
   margin-left: auto;
