--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2978,7 +2978,16 @@ body.notes .notesgroup {
   margin-top: 10px;
   border-bottom: 1px solid #555;
 }
-
+#mod-quiz-comment #manualgradingform,
+#mod-quiz-report #manualgradingform {
+  width: 100%;
+}
+#mod-quiz-report #manualgradingform .que {
+  margin-bottom: 0.7em;
+}
+.mform .que.comment .fitemtitle {
+  width: 20%;
+}
 /***
  *** Completion progress report
  ***/
