quiz editing: MDL-17398 made question grading field smaller to accommodate a bigger 'save' button in some languages (finnish:Tallenna)

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -4617,6 +4617,12 @@ table.quizreviewsummary td.cell {
     width:8em;
     padding:0.2em;
 }
+#mod-quiz-edit div.question div.content div.points input{
+    width:2em;
+}
+#mod-quiz-edit div.question div.content div.points input.pointssubmitbutton{
+    width:auto;
+}
 
 #mod-quiz-edit .questionbankwindow select#catmenu_jump{
     /* In Opera9, IE6 the width of the
