--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -4643,11 +4643,12 @@ table.quizreviewsummary td.cell {
 #mod-quiz-edit div.question div.content div.points{
     top:0.5em;
     border-left:#FFF solid 0.4em;
-    width:8em;
+    width:8.5em;
     padding:0.2em;
 }
 #mod-quiz-edit div.question div.content div.points input{
     width:2em;
+    padding:0;
 }
 #mod-quiz-edit div.question div.content div.points input.pointssubmitbutton{
     width:auto;
