--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -4886,6 +4886,10 @@ table.quizreviewsummary td.cell {
     margin:0.5em;
     margin-top:0.8em;
 }
+#mod-quiz-edit .questioncontentcontainer div.randomquestionqlist .totalquestionsinrandomqcategory{
+    overflow:auto;
+    white-space:normal;
+}
 
 
 #mod-quiz-edit .questioncontentcontainer div.randomquestionqlist ul{
