question bank: MDL-17992 and MDL-17397. Put back questiontext as a separate row option, and increase consistenscy between stand-alone qbank and the display in the quiz editing page.

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1187,7 +1187,12 @@ css id's of question bank*/
 #mod-quiz-edit .questionbankwindow div.header a{
     color:#FFF;
 }
-
+#categoryquestions .r1 {
+  background: #e4e4e4;
+}
+#categoryquestions .header {
+  border: 0 none;
+}
 
 /***
  *** Modules: Resource
