--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1026,6 +1026,14 @@ body#admin-modules table.generaltable td.c0
   margin-top: 1em;
 }
 
+#admin-report-security-index #timewarning {
+  text-align:center;
+}
+
+#admin-report-security-index .timewarninghidden {
+  display:none;
+}
+
 #admin-report-capability-index .rolecaps th {
   text-align: left;
 }
