MDL-18039 bacporting security overview report to 1.8.x

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -323,6 +323,18 @@ table.flexible .r1 {
   background-color: green;
 }
 
+#admin-report-security-index .statuswarning {
+  background-color: #f0e000;
+}
+
+#admin-report-security-index .statusserious {
+  background-color: #f07000;
+}
+
+#admin-report-security-index .statuscritical {
+  background-color: #f00000;
+}
+
 #adminsettings fieldset {
     background-color: #EEE;
     border-color: #BBB;
