quiz editing / question bank: MDL-18355 Convert the add question drop-down to be a button that pops up a YUI dialogue.
That allows us to have a few sentences explanation of each question type, and is also easier to fit into a tight layout.

This commit should also fix MDL-18214 Layout screwed in Safari with long category names.

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -809,6 +809,18 @@ table.message_search_results td {
  *** Question
  ***/
 
+#qtypechoicecontainer #chooseqtype .qtypes {
+  border-bottom-color: grey;
+}
+#qtypechoicecontainer #chooseqtype .selected {
+  background: #dddddd;
+}
+#qtypechoicecontainer #chooseqtype .instruction,
+#qtypechoicecontainer #chooseqtype .qtypesummary {
+  border-left-color: grey;
+  background-color: white;
+}
+
 .que {
     border-color: #DDD;
 }
