--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1073,8 +1073,14 @@ body#admin-modules table.generaltable td.c0
 #admin-report-questioninstances-index #settingsform p {
   margin-bottom: 0;
 }
-#admin-qtypes .cell.c4 {
+#admin-qtypes .cell.c3 {
   font-size: 0.7em;
+}
+#admin-qtypes .cell {
+  text-align: center;
+}
+#admin-qtypes .cell.c0 {
+  text-align: left;
 }
 #admin-roles-allowassign .buttons,
 #admin-roles-allowoverride .buttons,
