--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2919,6 +2919,9 @@ body.notes .notesgroup {
 #chooseqtype .qtypeoption {
   margin-bottom: 0.5em;
 }
+#chooseqtype label {
+  display: block;
+}
 #chooseqtype .qtypename img {
   padding: 0 0.3em;
 }
@@ -2950,6 +2953,9 @@ body.jsenabled #qtypechoicecontainer {
 }
 #qtypechoicecontainer #chooseqtype .qtypeoption {
   margin-bottom: 0;
+}
+#qtypechoicecontainer #chooseqtype .qtypeoption input {
+  display: none;
 }
 #qtypechoicecontainer #chooseqtype .instruction,
 #qtypechoicecontainer #chooseqtype .qtypesummary {
