MDL-18004 Fixed problem of duplicate entries in the drop-down

--- a/theme/standard/styles_fonts.css
+++ b/theme/standard/styles_fonts.css
@@ -618,7 +618,7 @@ body#grade-index .grades .header {
 #grade-aggregation-help code {
     font-style: normal;
 }
-option.optionheader {
+#choosepluginreport_jump option.optionheader {
     font-weight: bold;
 }
 
