--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -1073,6 +1073,9 @@ body#admin-modules table.generaltable td.c0
 #admin-report-questioninstances-index #settingsform p {
   margin-bottom: 0;
 }
+#admin-qtypes th {
+  white-space: normal;
+}
 #admin-qtypes .cell.c3 {
   font-size: 0.7em;
 }
@@ -1081,6 +1084,13 @@ body#admin-modules table.generaltable td.c0
 }
 #admin-qtypes .cell.c0 {
   text-align: left;
+}
+#admin-qtypes #qtypes div,
+#admin-qtypes #qtypes form {
+  display: inline;
+}
+#admin-qtypes #qtypes img.spacer {
+  width: 16px;
 }
 #admin-roles-allowassign .buttons,
 #admin-roles-allowoverride .buttons,
