--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -827,6 +827,7 @@ table.message_search_results td {
   border-color: #DDD;
 }
 .que .incorrect {
+    background-color: #faa;
 }
 
 .que.multianswer .incorrect {
