MDL-18462 theme: consistency in css for incorrect questions (merged from MOODLE_19_STABLE)
CVS: ----------------------------------------------------------------------
CVS: Enter Log.  Lines beginning with `CVS:' are removed automatically
CVS:
CVS: Committing in .
CVS:
CVS: Modified Files:
CVS:  Tag: MOODLE_19_STABLE
CVS: 	theme/standard/styles_color.css
CVS: ----------------------------------------------------------------------

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -842,6 +842,7 @@ table.message_search_results td {
   border-color: #DDD;
 }
 .que .incorrect {
+    background-color: #faa;
 }
 
 .que.multianswer .incorrect {
